  * Document noautoconfig in grml-cheatcodes. Thanks to Ralf Moll!
  * buildd:
    - rename all etch* related scripts to lenny*
    - adjust scripts to use "lenny" instead of "stable" for building
      [to avoid that "etch" is used as build name but lenny is used]
    - use "$NAME-daily-$SUITE" in functions.sh as build name so
      identifying ISOs while running them is easier

 -- Michael Prokop <mika@grml.org>  Fri, 20 Feb 2009 00:26:21 +0100

grml-live (0.9.8) unstable; urgency=low

  * Improve help text of the release option in usage info.
  * Drop fblog from GRML_FULL (obsolete with 2.6 kernels, #427139).
  * Add libcap2-bin to GRML_FULL.
  * Upgrade isolinux.bin to version from syslinux-common 2:3.73+dfsg-1.
    [Testing: issue569]
  * Integrate /etc/grml/fai/config/scripts/GRMLBASE/18-timesetup to
    improve UTC handling. Thanks for the script, Thomas Lehmann!

 -- Michael Prokop <mika@grml.org>  Thu, 12 Feb 2009 14:20:39 +0100

grml-live (0.9.7) unstable; urgency=low

  * Add packages to GRML_FULL:
    - aiccu (thanks, Christian Vogel)
    - genext2fs
    - radvd (thanks, Christian Vogel)
    - tf (thanks, Rhonda)
  * Add genext2fs to GRML_MEDIUM (for use within live-snapshot).
  * Support execution without touching the chroot at all using option "-B".
    Thanks for the patch, Jimmy.
  * Update current state section of documentation.
  * Update cheatcode documentation (thanks to Moritz Augsburger).
  * Drop cryopid from GRML_FULL, see #507882.

 -- Michael Prokop <mika@grml.org>  Fri, 12 Dec 2008 12:17:35 +0100

grml-live (0.9.6) unstable; urgency=low

  * Add new packages to GRML_FULL:
    - cciss-vol-status (HP SmartArray RAID Volume Status Checker)
    - dwdiff (front-end for the diff program that operates word by word)
    - espeakup (connector between espeak and speakup)
    - faketime (report faked system time to programs)
    - fcoretools (Tools to advise the IO scheduler)
    - latencytop (A tool for developers to visualize system latencies)