@@ -15,35 +15,47 @@
 
 <h2>About</h2>
 
-<p>This directory contains automatically generated snapshots of the <a
-href="http://grml.org/">grml Linux Live-CD</a> which were build using <a
+<p>This webpage provides <strong>automatically generated snapshots</strong> of
+the <a href="http://grml.org/">grml Linux Live-CD</a> which were build using <a
 href="http://grml.org/grml-live/">grml-live</a>.</p>
 
-<p>Feel free to use the ISOs but please notice that they are neither official <a
-href="http://grml.org/beta-tester/">devel releases</a> nor <a
-href="http://grml.org/download/">stable releases</a> - so: <strong>PLEASE
-USE THEM WITH CAUTION!</strong></p>
+<p>WARNING: Feel free to use the ISOs but please notice that they are neither
+official <a href="http://grml.org/beta-tester/">devel releases</a> nor <a
+href="http://grml.org/download/">stable releases</a>. They provide the latest
+changes, but they also might have known issues. In fact, they may not work at
+all. So: <strong>PLEASE USE THEM WITH CAUTION!</strong></p>
 
 <p>Please <a href="http://grml.org/bugs/">report any bugs you notice</a>!
 Thanks for helping us improve grml!</p>
 
+<!--
 <p><em>Notice: if the md5sum (.md5) of a file is missing please do not download
 the ISO yet as there might be problems with the ISO.</em></p>
+-->
+
+<h2>Download</h2>
+
+<!--
+<p>Notice: the first link on each line points to the most recent available
+snapshot of the according grml flavour. The 'md5'-link points to the according
+md5 checksum file. The link named 'older versions' points to the directory of
+the according grml flavour providing all available snapshots.</p>
+-->
 
 <h2>Explanation of directory-/filenames</h2>
 
 <ul>
-  <li>grml_etch:          normal, 32bit version based on Debian/etch (stable)
+  <li>grml_lenny:          normal, 32bit version based on Debian/lenny (stable)
   <li>grml_sid:           normal, 32bit version based on Debian/sid  (unstable)
-  <li>grml-medium_etch:   medium, 32bit version based on Debian/etch (stable)
+  <li>grml-medium_lenny:   medium, 32bit version based on Debian/lenny (stable)
   <li>grml-medium_sid:    medium, 32bit version based on Debian/sid  (unstable)
-  <li>grml-small_etch:    small,  32bit version based on Debian/etch (stable)
+  <li>grml-small_lenny:    small,  32bit version based on Debian/lenny (stable)
   <li>grml-small_sid:     small,  32bit version based on Debian/sid  (unstable)
-  <li>grml64_etch:        normal, 64bit version based on Debian/etch (stable)
+  <li>grml64_lenny:        normal, 64bit version based on Debian/lenny (stable)
   <li>grml64_sid:         normal, 64bit version based on Debian/sid  (unstable)
-  <li>grml64-medium-etch: medium, 64bit version based on Debian/etch (stable)
+  <li>grml64-medium-lenny: medium, 64bit version based on Debian/lenny (stable)
   <li>grml64-medium-sid:  medium, 64bit version based on Debian/sid  (unstable)
-  <li>grml64-small-etch:  small,  64bit version based on Debian/etch (stable)
+  <li>grml64-small-lenny:  small,  64bit version based on Debian/lenny (stable)
   <li>grml64-small-sid:   small,  64bit version based on Debian/sid  (unstable)
 </ul>
 
@@ -53,10 +65,11 @@ base64.tgz as /etc/grml/fai/config/basefiles/AMD64.tar.gz</p>
 
 <h2>Contact</h2>
 
-<p>Problems? Questions? <a href="http://grml.org/contact/">Contact us</a>.</p>
+<p>Problems? Questions? <a href="http://grml.org/contact/">Contact us</a>.  But
+please do not forget to provide all the relevant information (especially which
+grml flavour and version you are refering to).</p>
 
 <!--
 <h2>Important information by Sun Dec  9 13:13:59 UTC 2007</h2>
-
 <p><strong>Current ISOs are known to be broken, we are investigating on that.</strong></p>
 -->
