@@ -3,7 +3,6 @@
 # Authors:       grml-team (grml.org), (c) Michael Prokop <mika@grml.org>
 # Bug-Reports:   see http://grml.org/bugs/
 # License:       This file is licensed under the GPL v2 or any later version.
-# Latest change: Fri Oct 26 01:28:27 CEST 2007 [mika]
 ################################################################################
 
 # where do you want to store chroot/ISOs/...? Must be set!
