@@ -1,3 +1,3 @@
 deb http://deb.grml.org/            grml-stable  main
 deb http://deb.grml.org/            grml-testing main
-deb http://ftp.de.debian.org/debian etch         main contrib non-free
+deb http://ftp.de.debian.org/debian lenny        main contrib non-free
