@@ -13,7 +13,7 @@ TFTPROOT=/srv/tftp/fai
 #NFSROOT_ETC_HOSTS="192.168.1.250 yourinstallserver"
 
 # debootstrap commandline
-FAI_DEBOOTSTRAP="etch http://ftp.de.debian.org/debian"
+FAI_DEBOOTSTRAP="lenny http://ftp.de.debian.org/debian"
 
 # which options do you want to use for debootstrap?
 FAI_DEBOOTSTRAP_OPTS="--exclude=dhcp-client,info"
