@@ -3,7 +3,6 @@
 # Authors:       grml-team (grml.org), (c) Michael Prokop <mika@grml.org>
 # Bug-Reports:   see http://grml.org/bugs/
 # License:       This file is licensed under the GPL v2 or any later version.
-# Latest change: Fri Jan 11 01:55:54 CET 2008 [mika]
 ################################################################################
 
 # Main output directory
@@ -31,8 +30,8 @@ ISO_OUTPUT="$OUTPUT/grml_isos"
 # Default: unset (so do not remove the logfile(s))
 #ZERO_FAI_LOGFILE='1'
 
-# Which Debian suite to you want to use? Unless it is set it defaults to "etch"
-# Supported values are: etch, lenny, sid
+# Which Debian suite to you want to use? Unless it is set it defaults to "lenny"
+# Supported values are: etch, lenny, squeeze, sid
 # SUITE="sid"
 
 # Which FAI classes do you want to use by default?#
@@ -53,7 +52,7 @@ CLASSES="GRMLBASE,GRML_MEDIUM,I386"
 # /etc/grml/fai/apt/sources.list provides by default.
 # Use the variable like your /etc/apt/sources.list looks like.
 #GRML_LIVE_SOURCES="
-#deb http://192.168.1.112/debian     etch         main contrib non-free
+#deb http://192.168.1.112/debian     lenny        main contrib non-free
 #deb http://deb.grml.org/            grml-stable  main
 #deb http://deb.grml.org/            grml-testing main
 #deb http://ftp.de.debian.org/debian etch         main contrib non-free
@@ -64,7 +63,7 @@ CLASSES="GRMLBASE,GRML_MEDIUM,I386"
 # taken. If you specify a value then the file /etc/grml/fai/make-fai-nfsroot.conf
 # will be updated by grml-live on-the-fly.
 # Usage: "<suite> <mirror>"
-# FAI_DEBOOTSTRAP="etch http://ftp.de.debian.org/debian"
+# FAI_DEBOOTSTRAP="lenny http://ftp.de.debian.org/debian"
 
 # Do you want to use a local mirror (like NFS) as well?
 # If so specify the directory where debian/ is available:
